--- a/FishMarket.Web/Views/Shared/_MasterLayout.cshtml
+++ b/FishMarket.Web/Views/Shared/_MasterLayout.cshtml
@@ -23,6 +23,10 @@
                 </div>
             </div>
         </nav>
+        @if (TempData["message"] != null)
+        {
+            <div class="alert alert-success">@TempData["message"]</div>
+        }
         <div class="container">
             @RenderBody()
         </div>
