--- a/FishMarket.Web/Views/Fish/FishDetail.cshtml
+++ b/FishMarket.Web/Views/Fish/FishDetail.cshtml
@@ -1,23 +1,21 @@
 ﻿@model FishMarket.Model.Entities.Fish
 <div class="well">
-    @if (Model.ImageData != null)
-    {
-        <div class="pull-left" style="margin-right: 10px">
-            <img class="img-thumbnail" width="75" height="75" src="@Url.Action("GetImage", "Fish", new { Model.FishId })" />
+    <div class="row">
+        <div class="col-xs-10">
+            @if (Model.ImageData != null)
+            {
+                <div class="pull-left" style="margin-right: 10px">
+                    <img class="img-thumbnail" width="75" height="75" src="@Url.Action("GetImage", "Fish", new { Model.FishId })" />
+                </div>
+            }
+            <h4>
+                <strong>@Model.Name</strong>
+                <span class="pull-right label label-primary">@Model.Price.ToString("c")</span>
+            </h4>
         </div>
-    }
-    <h3>
-        <strong>@Model.Name</strong>
-        <span class="pull-right  label  label-primary">@Model.Price.ToString("c")</span>
-    </h3>
-
-    @using (Html.BeginForm("Edit", "Fish"))
-    {
-        <div class="pull-right">
-            @Html.HiddenFor(x => x.FishId)
-            @Html.Hidden("returnUrl", Request.Url.PathAndQuery)
-            <input type="submit" class="btn btn-success pull-right" value="Edit" />
+        <div class="col-xs-2">
+            <a href="/Fish/Edit/@Model.FishId.ToString()" class="btn btn-primary pull-right">Edit</a>
         </div>
-    }
+    </div>
 </div>
 
