Save fish operation completed.

--- a/FishMarket.Web/Views/Shared/_MasterLayout.cshtml
+++ b/FishMarket.Web/Views/Shared/_MasterLayout.cshtml
@@ -5,6 +5,7 @@
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <link href="~/Content/bootstrap-theme.css" rel="stylesheet" />
     <link href="~/Content/ErrorStyles.css" rel="stylesheet" />
+    <script src="~/Scripts/jquery-1.9.1.js"></script>
     <title>@ViewBag.Title</title>
 </head>
 <body>
